# moriocho-radio

./: .env  Cargo.toml  README.md  sources.json
src/: ai.rs  ai_resume.rs  config.rs  fetch.rs  filter.rs  main.rs  news_fetcher.rs  types.rs
src/ai/: ai_filter.rs  ai_resume.rs  filter.rs  resume.rs
src/fetch/: meteo.rs  mod.rs  news.rs  news_fetcher.rs  weather.rs
src/filter/: banned.rs  bannedfilter.rs  category.rs  categoryfilter.rs  mod.rs
