[package]
name = "moriocho-radio"
version = "0.0.1"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.9", features = ["json"] }
tokio = { version = "1.41.1", features = ["full"] }
scraper = "0.21.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
rss = "2.0.11"
futures = "0.3.31"
chrono = "0.4"
dotenv = "0.15.0"
tts = "0.26.3"
indicatif = "0.17.9"
